--- a/wp-content/themes/Sweposters/resources/scss/app.scss
+++ b/wp-content/themes/Sweposters/resources/scss/app.scss
@@ -2,6 +2,8 @@
 @import '_footer.scss';
 @import '_header.scss';
 @import '_categories.scss';
+@import '_productcard.scss';
+@import '_banner.scss';
 
 body {
   margin: 0;
