--- a/wp-content/themes/Sweposters/resources/scss/_globalVariables.scss
+++ b/wp-content/themes/Sweposters/resources/scss/_globalVariables.scss
@@ -13,6 +13,8 @@ $backgroundColor: #edeec7;
 $default-border-radius: 10px;
 $default-margin-side: 10rem;
 
+// h1 
+$h1-fontstyle: italic;
 //font import
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
