--- a/wp-content/themes/Sweposters/resources/scss/_productcard.scss
+++ b/wp-content/themes/Sweposters/resources/scss/_productcard.scss
@@ -86,6 +86,9 @@
     
 }
 
+//sale tag
+.wc-block-grid__product-onsale{}
+
 //buttons
 
 .wp-block-button__link.add_to_cart_button.ajax_add_to_cart{
