--- a/wp-content/themes/Sweposters/resources/scss/_footer.scss
+++ b/wp-content/themes/Sweposters/resources/scss/_footer.scss
@@ -1,8 +1,9 @@
 footer {
-    background-color: rgb(236, 236, 236);
+    background-color: #0693e3(236, 236, 236);
     padding: 0;
     margin: 0;
     width: 100%;
+    border: 1px solid black;
 
     .container {
         display: flex;
